[gd_scene load_steps=3 format=3 uid="uid://cjc1o0jpthgvu"]

[ext_resource type="Script" path="res://sprite/sprite_animation_load_sprite_textures.gd" id="1_w8usp"]
[ext_resource type="SpriteFrames" uid="uid://dofsxbhmho4gb" path="res://resources/sprite/actor001/sprite2d_animation_actor001.tres" id="2_nvujc"]

[node name="sprite_animation_load_sprite_textures" type="Node2D"]
script = ExtResource("1_w8usp")

[node name="AnimatedSprite2D_1" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.5, 3.5)
sprite_frames = ExtResource("2_nvujc")
animation = &"ani_1"
offset = Vector2(0, -22)

[node name="Label" type="Label" parent="AnimatedSprite2D_1"]
offset_left = -37.7143
offset_right = 113.286
offset_bottom = 49.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "load sprite frames
in editor"
horizontal_alignment = 1

[node name="AnimatedSprite2D_2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.5, 3.5)
offset = Vector2(0, -22)

[node name="Label" type="Label" parent="AnimatedSprite2D_2"]
offset_left = -37.7143
offset_right = 113.286
offset_bottom = 49.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "load sprite frames
in script"
horizontal_alignment = 1

[node name="AnimatedSprite2D_3" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.5, 3.5)
offset = Vector2(0, -22)

[node name="Label" type="Label" parent="AnimatedSprite2D_3"]
offset_left = -37.7143
offset_right = 113.286
offset_bottom = 49.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "build sprite frames
in script"
horizontal_alignment = 1
